...
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/course_name"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/course_name_field"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/course_name_hint"
            android:inputType="textPersonName" />
...
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/course_number_title"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/course_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/course_number_hint"
            android:inputType="textPersonName"
...
