...
                app:layout_constraintTop_toTopOf="@+id/blanc1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewer"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_margin="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:foregroundTint="@color/light_grey"
...
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_course_btn"
            android:layout_width="169dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/garnet"
...
