...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uottawa_logo">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_courses_page_btn"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/garnet"
            android:fontFamily="sans-serif-medium"
            android:text="View Courses"
...
            android:background="@color/garnet"
            android:layout_marginBottom="10dp"
            android:text="@string/view_accounts"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_out_btn_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/garnet"
            android:fontFamily="sans-serif-medium"
            android:text="Sign Out"
...
