...
                    android:fontFamily="sans-serif-medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/roleStudent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="user_role_text"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"
                    android:textSize="20sp"
...
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_out_btn_student"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@color/garnet"
        android:fontFamily="sans-serif-medium"
        android:text="Sign Out"
...
